[package]
name = "ld_framework"
version = "0.1.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kettlewin = { git = "https://github.com/kettle11/kettlewin" }
glow = {git = "https://github.com/grovesNL/glow"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.10"
wasm-bindgen = "0.2.60"
js-sys = "0.3.37"
console_error_panic_hook = "0.1.6"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
web-sys = "0.3.37"
features = [
    "console",
    "Document",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "MouseEvent",
    "KeyboardEvent",
    "Event",
    "WebGlContextAttributes",
    "Window"
]
